# havocompare

./: .gitignore  Cargo.toml  LICENSE  README.md  config_scheme.json  deny.toml  dprint.json
.github/actions/lint/: action.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  rust.yml
src/: directory.rs  external.rs  file_exist.rs  hash.rs  html.rs  image.rs  json.rs  lib.rs  main.rs  pdf.rs  print_args.rs  properties.rs
src/csv/: mod.rs  preprocessing.rs  tokenizer.rs  value.rs
src/csv/tokenizer/: guess_format.rs  mod.rs
src/report/: mod.rs  template.rs
tests/: integ.rs
tests/csv/data/: Annotations.csv  Annotations_diff.csv  CM_quality_threshold.csv  Components.csv  CumulatedHistogram.csv  DeviationHistogram.csv  DeviationHistogram_diff.csv  Multi_Apply_Rotation.csv  defects.csv  defects_headers.csv  easy_pore_export_annoration_table_result.csv  no_field_sep.csv
tests/html/: html_changed.html  test.html
tests/integ/: config.yml  jpg_compare.yml  json.yml  vgrf.yml
tests/integ/data/display_of_status_message_in_cm_tables/actual/: Features_VolumeWithAllStatusMessage3_2.csv  Volume1.csv  VolumeWithAllStatusMessage3.csv
tests/integ/data/display_of_status_message_in_cm_tables/expected/: Volume1.csv  VolumeWithAllStatusMessage.csv  VolumeWithAllStatusMessage2.csv
tests/integ/data/json/actual/: guy.json
tests/integ/data/json/expected/: guy.json
