[package]
name = "havocompare"
description = "A flexible rule-based file and folder comparison tool and crate including nice html reporting. Compares CSVs, text files, pdf-texts and images."
repository = "https://github.com/VolumeGraphics/havocompare"
homepage = "https://github.com/VolumeGraphics/havocompare"
documentation = "https://docs.rs/havocompare"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["Volume Graphics GmbH"]
exclude = ["tests/pdf", "tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
keywords = ["diff" ,"compare", "csv", "image", "difference"]
categories = ["filesystem"]

[dependencies]
clap = {version= "4.0", features=["derive"]}
serde = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
schemars_derive = "0.8"
thiserror = "1.0"
regex = "1.6"
image = "0.24.4"
image-compare = "0.2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
glob = "0.3"
test-log = {version="0.2", features=["trace"]}
strsim = "0.10"
itertools = "0.10"
tera = "1.17"
sha2 = "0.10"
data-encoding = "2.3"
permutation = "0.4"
pdf-extract = "0.6.4"
vg_errortools = "0.1"
rayon = "1.6"
enable-ansi-support = "0.2"
tempfile = "3.3"
fs_extra = "1.3"

[dev-dependencies]
env_logger = "0.10"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
