[package]
name = "havocompare"
description = "A flexible rule-based file and folder comparison tool and crate including nice html reporting. Compares CSVs, JSON, text files, pdf-texts and images."
repository = "https://github.com/VolumeGraphics/havocompare"
homepage = "https://github.com/VolumeGraphics/havocompare"
documentation = "https://docs.rs/havocompare"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Volume Graphics GmbH"]
exclude = ["tests/pdf", "tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
keywords = ["diff", "compare", "csv", "image", "difference"]
categories = ["filesystem"]
default-run = "havocompare"

[[bin]]
name = "print_args"
path = "src/print_args.rs"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
schemars_derive = "0.8"
thiserror = "1.0"
regex = "1.10"
image = "0.25"
image-compare = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
glob = "0.3"
test-log = { version = "0.2", features = ["trace"] }
strsim = "0.11"
itertools = "0.12"
tera = "1.19"
sha2 = "0.10"
data-encoding = "2.5"
permutation = "0.4"
pdf-extract = "0.7"
vg_errortools = "0.1"
rayon = "1.9.0"
enable-ansi-support = "0.2"
tempfile = "3.8"
fs_extra = "1.3"
opener = "0.7"
anyhow = "1.0"
json_diff_ng = { version = "0.4" }


[dev-dependencies]
env_logger = "0.11"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
